@@ -24,6 +24,12 @@ href="http://cygwin.com/setup.exe">here</a>,
  the <b>Package View</b> dialogue, select LilyPond, found in the
 <b>Publishing</b> section.
 
+
+<li> LilyPond will now be installed, along with supporting
+programs. The download is 66 MB, and the installation requires 260 MB
+of free disk space.
+
+
 </ul>
 
 If you are not 100% sure of what you're doing, then don't change the
@@ -31,7 +37,6 @@ defaults. <B>Don't</b> change the default install directory
 (<code>c:/cygwin</code>), and
 <b>don't</b> change the default text type (UNIX).
 
-<! how much space necessary?> 
 
 <p>
 
